# rental-aggregator

./: .env.example  .gitignore  README.md  config.py  main.py  models.py  pyproject.toml  render.yaml  requirements.txt  server.py
pipeline/: base_scraper.py  deduplicator.py  extractor.py  geocoder.py  message_generator.py  orchestrator.py  scheduler.py  scraper.py  scraper_99acres.py  scraper_facebook.py  scraper_housing.py  scraper_magicbricks.py  scraper_nobroker.py  scraper_telegram.py  storage.py
static/: index.html
